# AChervov-Parallelism-24943

./: .gitignore  MultiTask.code-workspace  README.md  math.py  plot.py  test.py
Task1/: CMakeLists.txt  main.cpp
Task1/inc/: CMakeLists.txt  fp_types.h  types.h
Task2/lib/: matrix.h
Task2/linear/: CMakeLists.txt  main.cpp
Task_2_1/: CMakeLists.txt  README.md  main.cpp  results.csv
Task_2_1/lib/: CMakeLists.txt  matrix.h  matrix.hpp
Task_2_2/: CMakeLists.txt  main.cpp
Task_2_2/lib/: CMakeLists.txt  utilities.hpp
linear/: CMakeLists.txt
linear/lib/: CMakeLists.txt  matrix.h
